<resources>
    <string name="app_name">Hoop !!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello camera fragment</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="camera">Camera</string>
    <string name="status">Status</string>
    <string name="hello_calls_fragment">Hello Calls Fragment</string>
    <string name="chat_fragment">Chat Fragment</string>
    <string name="welcome_status_fragment">Welcome Status Fragment</string>
    <string name="my_status">My Status</string>
    <string name="dummy_text">dummyText</string>
    <string name="call_type">Call Type</string>
    <string name="communication_type">Communication Type</string>
    <string name="my_status_add">My Status Add</string>
    <string name="touch_for_add_a_status_update">Touch for add a status update</string>
    <string name="callCount">(%1d)</string>
</resources>
