<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="56dp"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              android:layout_alignParentTop="true"
              android:id="@+id/bottomTabLayout"
              android:background="@color/colorPrimary">


    <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_camera"
            android:layout_weight="1.20"/>

    <TextView
            android:id="@+id/btnChats"
            android:text="@string/chats"
            style="@style/tabLayout"/>

    <TextView android:id="@+id/btnCalls"
              android:text="@string/calls"
              style="@style/tabLayout"/>


    <TextView
            android:id="@+id/btnStatus"
            android:text="@string/status"
            style="@style/tabLayout"/>


</LinearLayout>